--- a/src/app/mobile-list/mobile-list.component.html
+++ b/src/app/mobile-list/mobile-list.component.html
@@ -57,8 +57,9 @@
 
          <div class="col-md pt-2 pl-0 ml-0">
           <div><h5><strong>₹{{mobile.price}} /-</strong></h5></div> 
-          <div style="float: right;"><img height="21" src="https://static-assets-web.flixcart.com/www/linchpin/fk-cp-zion/img/fa_62673a.png"></div>
-         <p> <del class="text-muted">₹{{mobile.price*(1-mobile.discountPercent/100) | number}}</del> <span *ngIf="mobile.discountPercent>0" class="text-success ml-1">{{mobile.discountPercent}}<small>% Off</small></span></p>
+          <p> <del class="text-muted">₹{{mobile.price*(1-mobile.discountPercent/100) | number}}</del> <span *ngIf="mobile.discountPercent>0" class="text-success ml-1">{{mobile.discountPercent}}<small>% Off</small></span></p>
+          <div style="float: right;"><img height="52" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTRXGO8AniYrPYE1bb1MVB7tbv2_tBFvWjhznZH8E2kj4v7MAsMq3uOdl3-uel-qcZnaC8&usqp=CAU">
+        </div>
          <span>Delivered By <strong>2PM Tomorrow</strong></span> 
          
          <!-- <div class="p-3">
